# plutonium_engine

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NEXTREADMENEXT.md  PRD.md  README.md  SECURITY.md  TODO.md  api-baseline-host.txt  api-baseline-wasm.txt  notes  notes.txt  response.md
.cursor/: README.md
.github/workflows/: ci.yml
docs/: api-styles.md  coordinates-and-dpi.md  creating-ui-lib.md  features-and-modules.md  getting-started.md  instancing-and-batching.md  layering.md  layout-positioning-example.md  layout.md  text-style-example.md  textures.md  ui-lib-example.md
examples/: actions_demo.rs  anim_demo.rs  button_debug.rs  camera.rs  grid.rs  halo_showcase.rs  halo_text_container.rs  jitter_test.rs  layout_basic.rs  layout_percent_position.rs  layout_top_bar.rs  msdf_visual_test.rs  png_smoke_test.rs  raster_cache_visual_test.rs  rect_glow_test.rs  slider.rs  text.rs  text2d.rs  text_alignment.rs  text_autosize_demo.rs  text_input.rs  texture2d.rs  texture2d_raster.rs  texture_atlas.rs  texture_atlas2d.rs  texture_atlas_2d.rs  texture_svg.rs  toggle.rs  ui_primitives.rs  wasm_text_smoke.rs
examples/media/: ASSET_LICENSES.md  roboto.msdf.json
plutonium_game/: README.md
plutonium_game/crates/assets/: Cargo.toml
plutonium_game/crates/assets/src/: lib.rs
plutonium_game/crates/audio/: Cargo.toml
plutonium_game/crates/audio/src/: lib.rs
plutonium_game/crates/core/: Cargo.toml
plutonium_game/crates/core/src/: lib.rs  tests.rs
plutonium_game/crates/gameplay/: Cargo.toml
plutonium_game/crates/gameplay/src/: lib.rs
plutonium_game/crates/input/: Cargo.toml
plutonium_game/crates/input/src/: lib.rs  tests.rs
plutonium_game/crates/ui/: Cargo.toml  README.md
plutonium_game/crates/ui/examples/: drag_drop_demo.rs  hello_world.rs  image_demo.rs  layout_demo.rs  progress_demo.rs  style_stack_demo.rs  text_input_demo.rs  tooltip_demo.rs
plutonium_game/crates/ui/src/: lib.rs
plutonium_game/crates/ui/src/immediate/: context.rs  drag_drop.rs  draw_list.rs  focus.rs  input.rs  input_map.rs  layout.rs  mod.rs  painter.rs  response.rs  state.rs  tooltip.rs  types.rs
plutonium_game/crates/ui/tests/: state_cache_tests.rs
plutonium_game/docs/: architecture.md  ecs_and_input.md  scenes_and_focus.md  ui_and_theme.md
plutonium_game/examples/: arc_layout_demo.rs
plutonium_game/examples/arc_layout_demo/: Cargo.toml
plutonium_game/examples/arc_layout_demo/src/: main.rs
plutonium_game/examples/demo_card_game/: Cargo.toml  manifest.toml
plutonium_game/examples/demo_card_game/src/: main.rs
plutonium_game/snapshots/replays/: minimal.json
scripts/: check-api.sh  run_wasm_text_smoke.sh
shaders/: glow.wgsl  rect.wgsl  shader.wgsl  text_msdf.wgsl
snapshots/replays/: app_session.json  rec.json
src/: anim.rs  app.rs  button.rs  camera.rs  draw.rs  error.rs  font_msdf.rs  font_raster.rs  glow.rs  gpu_timer.rs  input.rs  layout.rs  lib.rs  objects.rs  popup.rs  popup_render.rs  render.rs  renderer.rs  rng.rs  text.rs  text_input.rs  texture_atlas.rs  texture_svg.rs  traits.rs  ui.rs  utils.rs
src/pluto_objects/: button.rs  shapes.rs  text2d.rs  text_input.rs  texture_2d.rs  texture_atlas_2d.rs
tests/: anim_tests.rs  api_autotraits.rs  camera_tests.rs  halo_tests.rs  layout_tests.rs  rectangle_tests.rs  rng_tests.rs  transform_tests.rs  uv_tests.rs
z-harness/: metrics.jsonl
z-harness/archive/20260603T045500Z-prod-readiness-audit/: events.jsonl
z-harness/archive/20260604T041707Z-decompose-lib/: events.jsonl
z-harness/plans/decompose-lib/: PLAN.md  SPEC.md  TASKS.md
z-harness/plans/decompose-lib/archive/20260604T041707Z-decompose-lib/: TASKS.md  decisions.md  manifest.json  phase0-premise.md  phase1-context.md  phase3-decisions-final.md
z-harness/plans/decompose-lib/archive/20260604T041707Z-decompose-lib/transcripts/: .consult.txt  .review.txt  consult-codex.err  consult-codex.txt  consult-gemini.txt  phase7-codex.err  phase7-codex.txt
z-harness/plans/decompose-lib/archive/tasks/T001/: diff.patch  review-diff.patch
z-harness/plans/decompose-lib/archive/tasks/T002/: diff.patch
z-harness/plans/decompose-lib/archive/tasks/T003/: diff.patch
z-harness/plans/decompose-lib/archive/tasks/T004/: diff.patch
z-harness/plans/decompose-lib/archive/tasks/T005/: diff.patch
z-harness/plans/decompose-lib/archive/tasks/T006/: diff.patch
z-harness/plans/decompose-lib/archive/tasks/T007/: diff.patch
z-harness/plans/decompose-lib/archive/tasks/T008/: diff.patch
z-harness/plans/prod-readiness-audit/: PLAN.md  REPORT.md  SPEC.md  TASKS.md  escalation.md  findings-cleanliness.md  findings-correctness.md  findings-design.md  findings-perf.md
z-harness/plans/prod-readiness-audit/archive/20260603T045500Z-prod-readiness-audit/: events.jsonl  phase1-scope.md
z-harness/plans/prod-readiness-audit/archive/20260603T045500Z-prod-readiness-audit/transcripts/: .consult_prompt.txt  .review_prompt.txt  .review_prompt2.txt  consult-codex.err  consult-codex.txt  consult-gemini.err  consult-gemini.txt  review-codex-tasks-2.err  review-codex-tasks-2.txt  review-codex-tasks.err  review-codex-tasks.txt
