[package]
name = "plutonium_engine"
version = "0.3.0"
authors = ["Zeke Barnett coding@zeke13.com"]
description = "Pure Rust Graphics Engine"
license = "Apache-2.0"
repository = "https://github.com/zeke13dev/plutonium"
homepage = "https://zeke13.com"                       # not quite open yet; stay tuned!
documentation = "https://docs.rs/plutonium_engine"
readme = "README.md"
keywords = ["wgpu", "rendering", "svg"]
categories = ["graphics", "rendering"]
edition = "2021"

[dependencies]
image = "0.25.1"
winit = "0.30.0"
wgpu = "0.20.0"
env_logger = "0.11.1"
pollster = "0.3.0"
tiny-skia = "0.11.3"
resvg = "0.41.0"
fontdb = "0.17.0"
smol_str = "0.2.1"
futures = "0.3.30"
tokio = "1.37.0"
glyphon = "0.5.0"
queues = "1.0.2"
rusttype = "0.9.3"
ab_glyph_rasterizer = "0.1.8"

uuid = { version = "1", features = ["v4"] }

[dependencies.bytemuck]
version = "1.14.1"
features = ["derive"]
