[package]
name = "plutonium_engine"
version = "0.3.0"
authors = ["Zeke Barnett coding@zeke13.com"]
description = "Pure Rust Graphics Engine"
license = "Apache-2.0"
repository = "https://github.com/zeke13dev/plutonium"
homepage = "https://zeke13.com"                       # not quite open yet; stay tuned!
documentation = "https://docs.rs/plutonium_engine"
readme = "README.md"
keywords = ["wgpu", "rendering", "svg"]
categories = ["graphics", "rendering"]
edition = "2021"

[dependencies]
image = "0.25.5"
winit = "0.30.8"
wgpu = "23.0.1"
env_logger = "0.11.6"
pollster = "0.4.0"
tiny-skia = "0.11.4"
resvg = "0.44.0"
fontdb = "0.23.0"
smol_str = "0.3.2"
futures = "0.3.31"
tokio = "1.42.0"
glyphon = "0.7.0"
queues = "1.1.0"
rusttype = "0.9.3"
ab_glyph_rasterizer = "0.1.8"

uuid = { version = "1.11.0", features = ["v4"] }

[dependencies.bytemuck]
version = "1.21.0"
features = ["derive"]
