[package]
name = "plutonium_engine"
version = "0.7.0"
authors = ["Zeke Barnett coding@zeke13.com"]
description = "Pure Rust Graphics Engine"
license = "Apache-2.0"
repository = "https://github.com/zeke13dev/plutonium"
homepage = "https://zeke13.com"                       # not quite open yet; stay tuned!
documentation = "https://docs.rs/plutonium_engine"
readme = "README.md"
keywords = ["wgpu", "rendering", "svg"]
categories = ["graphics", "rendering"]
edition = "2021"

[dependencies]
image = "0.25.5"
winit = "0.30.8"
wgpu = "23.0.1"
env_logger = "0.11.6"
pollster = "0.4.0"
tiny-skia = "0.11.4"
resvg = "0.44.0"
rusttype = "0.9.3"
anyhow = "1.0.86"
arboard = "3.4.0"

uuid = { version = "1.11.0", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.bytemuck]
version = "1.21.0"
features = ["derive"]

[features]
default = ["backend-wgpu", "widgets"]
backend-wgpu = []
raster = []        # enable PNG/JPEG helper APIs
widgets = []       # enable retained-mode widgets (Button, TextInput, etc.)
layout = []        # enable simple layout helpers (anchors/percent)
anim = []          # enable tweening/animation APIs
replay = []        # enable record/replay helpers and RNG-driven examples

[workspace]
members = [
    ".",
    "plutonium_game/crates/core",
    "plutonium_game/crates/input",
    "plutonium_game/crates/assets",
    "plutonium_game/crates/ui",
    "plutonium_game/crates/audio",
    "plutonium_game/crates/gameplay",
    "plutonium_game/examples/demo_card_game",
]

[dev-dependencies]
plutonium_game_input = { path = "plutonium_game/crates/input" }


