[package]
name = "plutonium_game_ui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
plutonium_game_core = { path = "../core" }
plutonium_engine = { path = "../../../" }
uuid = { version = "1" }
plutonium_game_input = { path = "../input" }


[dev-dependencies]
wgpu = "23"
image = "0.25"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
anyhow = "1"


